--- a/home.css
+++ b/home.css
@@ -6,137 +6,55 @@
   box-sizing: border-box;
 }
 
+
+
+
 body{
   background-color: red;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Roboto', sans-serif;
 }
 
-
-.wrapper {
-  margin: 0 auto;
-  max-width: 1200px;
-}
 
 header{
 border-bottom: 2px solid black;
+background-color: red;
 }
 
 nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 80px;
   background-color: red;
 }
 
-nav .wrapper{
-  height: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .logo{
   text-transform: uppercase;
   font-weight: 900;
-  color: white;
+  color: rgb(232, 46, 46);
   font-size: 50px;
 }
 
-
-<!-- Sfondo -->
-.jumbo{
-background-image: url(img/dog-puppy-on-garden-royalty-free-image-1586966191.jpg);
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-display: flex;
-justify-content: center;
-align-items: center;
+.menu {
+  border: 2px solid black;
 }
 
-.jumbo .cta h1 {
-  font-size: 80px;
+.menu ul {
+  display: flex;
+}
+
+.menu ul li {
+  list-style: none;
+}
+
+.menu ul li a {
+  text-decoration: none;
   color: white;
-  text-align: center;
+  margin: 0 20px;
+  text-transform: uppercase;
+  font-weight: bolder;
 }
-
-.jumbo .cta .bnts {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn {
-  margin: 20px 10px 0 10px;
-  padding: 10px 20px;
-  font-weight: bold;
-  border-radius: 25px;
-  cursor:pointer;
-  }
-
-.btn_1{
-background-color: white;
-}
-
-.btn_2{
-background-color: black;
-color: white;
-}
-
-
-/* section-1 */
-
-.pizza-section{
-background-color: white;
-padding: 20px 0;
-}
-
-.pizza-section .wrapper{
-  border: 10px solid green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pizza-section .img, .pizza-section .text {
-  width: 50px;
-}
-
-.pizza-section .img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pizza-section .img img{
-width: 300px;
-height: 300px;
-}
-
-.pizza-section .txt{
-color: #000;
-}
-
-
-
-/* media Queries */
-
-
-/* Media query per dipositivi con larghezza massima di 600px */
-@media only screen and (max-width: 600px) 
-{
-  p {
-    font-size: 50px;
-  } 
-
-  /* Media query per dipositivi con larghezza compresa tra 601px e 900px */
-
-  /* @media only screen and (min-width: 601px) and (max-width: 900px)
-  {
-    p {
-      font-size: 50px;
-    } */
 
 
 
