--- a/home.css
+++ b/home.css
@@ -10,34 +10,40 @@
 
 
 body{
-  background-color: red;
+  background-color: #efd6c0;
   font-family: 'Roboto', sans-serif;
 }
 
 
 header{
-border-bottom: 2px solid black;
-background-color: red;
+/* border-bottom: 2px solid black; */
+background-color: rgb(255, 255, 255);
 }
 
 nav{
+  background-color: rgb(228, 247, 236) 27);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 80px;
-  background-color: red;
+  padding: 0 30px 0 30px;
 }
 
+img{
+  width: 83px;
+  height: 83px;
+}
 
 .logo{
   text-transform: uppercase;
   font-weight: 900;
-  color: rgb(232, 46, 46);
-  font-size: 50px;
+  color: #fbddc3;
+}
+
+nav .logo{
+  width: 70px;
 }
 
 .menu {
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 
 .menu ul {
@@ -50,12 +56,29 @@ nav{
 
 .menu ul li a {
   text-decoration: none;
-  color: white;
+  color: #0597F2;
   margin: 0 20px;
   text-transform: uppercase;
   font-weight: bolder;
 }
 
+.menu ul li a:hover{
+  color: #F27405;
+}
 
+/* wrapper */
+.wrapper{
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+}
 
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.gap {
+  gap: 40px;
+}
