--- a/home.css
+++ b/home.css
@@ -68,6 +68,7 @@ nav .logo{
 
 /* wrapper */
 .wrapper{
+  margin: 0 auto;
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
@@ -82,3 +83,93 @@ nav .logo{
 .gap {
   gap: 40px;
 }
+
+
+/* cta jumbo */
+.jumbo{
+  height: calc(100vh - 70px);
+  background-image: url("img/photo-1607068891828-f16297950a66.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.jumbo .cta {
+  /* border: 2px solid black; */
+}
+
+.jumbo .cta h1{
+  /* border: 2px solid black; */
+  font-size: 100px;
+  color: white;
+  text-align: center;
+}
+
+.jumbo .cta .buttons{
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.button{
+  /* border: 2px solid black; */
+  margin: 30px 20px 0 20px;
+  padding: 20px 30px;
+  font-weight: bold;
+  border-radius: 40px;
+  cursor: pointer;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button_1{
+  /* border: 2px solid #3C35F2; */
+  background-color: #0597F2;
+  color: #ffffff;
+}
+
+.button_2{
+  /* border: 2px solid black; */
+  background-color: #F25C05;
+
+}
+
+
+.button_1 a{
+    /* border: 2px solid #3C35F2; */
+  background-color: #0597F2;
+  text-decoration: none;
+  color: white;
+}
+
+.button_2 a{
+  text-decoration: none;
+  color: white;
+}
+
+
+
+.button_1:hover{
+  text-decoration: none;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+}
+
+.button_2:hover{
+  background-color: #000000;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+
+
+
