--- a/home.css
+++ b/home.css
@@ -209,6 +209,48 @@ padding: 20px 80px;
 
 
 
+/* <!-- MILESTONE 4  --> */
+
+h2{
+  color: black;
+  text-decoration: none;
+}
+
+.card-container{
+display: flex;
+justify-content: center;
+text-align: center;
+}
+
+.card {
+  width: 300px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 0 10px;
+  padding: 16px;
+  text-align: center;
+}
+
+.card img {
+  max-width: 100%;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.card-description {
+  font-size: 14px;
+  color: black;
+}
+
+
+
+
 
 
 
